--- a/index.html
+++ b/index.html
@@ -1,39 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Knoxville Technologies provides reliable fiber network solutions in East Tennessee.">
-
-    <!-- Title and Branding -->
-    <title>Knoxville Technologies - Fiber Network Solutions</title>
-    <link rel="icon" href="/favicon.ico" />
-
-    <!-- Performance Optimizations -->
-    <link rel="preconnect" href="https://unpkg.com" crossorigin>
-    <link rel="dns-prefetch" href="https://unpkg.com">
-
-    <!-- SEO Open Graph Tags -->
-    <meta property="og:title" content="Knoxville Technologies - Fiber Network Solutions" />
-    <meta property="og:description" content="Fiber coverage maps and future expansion plans." />
-    <meta property="og:image" content="/cover.jpg" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://0001fella.github.io/knoxville/" />
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Knoxville Technologies - Fiber Network Solutions" />
-    <meta name="twitter:description" content="Explore our fiber coverage areas with interactive maps." />
-    <meta name="twitter:image" content="/cover.jpg" />
+    <title>Knoxville Technologies Ltd</title>
   </head>
-
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="bg-slate-900 text-white">
     <div id="root"></div>
-
-    <!-- Vite script entry point -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
