--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Knoxville Technologies Ltd</title>
+    
+    <title>Knoxville Internet | Home Fibre & Business Connectivity</title>
+
+    <!-- Meta Description for SEO -->
+    <meta name="description" content="Knoxville Internet provides reliable, high-speed fibre internet for homes and businesses in Kenya. Affordable packages, great uptime, and 24/7 support." />
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:title" content="Knoxville Internet" />
+    <meta property="og:description" content="Reliable fibre internet for home and business. Explore packages, coverage, and more." />
+    <meta property="og:image" content="/logo4.webp" />
+    <meta property="og:url" content="https://knoxvilletechnologies.com.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Knoxville Internet" />
+    <meta name="twitter:description" content="Unlimited internet for your home with Knoxville Internet – Home of Fibre Internet" />
+    <meta name="twitter:image" content="/logo4.webp" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/webp" href="/favicon.png" />
+
+    <!-- Optional: Theme Color for Mobile Browsers -->
+    <meta name="theme-color" content="#1e3a8a" />
   </head>
   <body class="bg-slate-900 text-white">
     <div id="root"></div>
