updated:index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:image" content="/logo4.webp" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/webp" href="/favicon.png" />
+    <link rel="icon" type="image/webp" href="/logo4.webp" />
 
     <!-- Optional: Theme Color for Mobile Browsers -->
     <meta name="theme-color" content="#1e3a8a" />
