--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Knoxville Internet | Home Fibre & Business Connectivity</title>
+    <title>Knoxville Technologis Ltd Home Fibre </title>
 
     <!-- Meta Description for SEO -->
     <meta name="description" content="Knoxville Internet provides reliable, high-speed fibre internet for homes and businesses in Kenya. Affordable packages, great uptime, and 24/7 support." />
