--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Metadata -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2b473f" />
     <meta name="description" content="Anointed Vessels Christian School – Growing the next generation of Christian leaders in Kenya.">
 
-    <!-- Title and Branding -->
     <title>Anointed Vessels Christian School</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
 
-    <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 
-    <!-- Google Fonts: All fonts used in GGCC website -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Merriweather:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Font Awesome Icons (used in GGCC site) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-    <!-- Elegant Icons (used in GGCC site) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/elegant-icons/1.0.1/elegant-icons.min.css" />
 
-    <!-- Ion Icons (used in GGCC site) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/7.1.2/esm/ionicons.min.css" />
 
-    <!-- Custom Font: Ernest Emily (as used in GGCC site) -->
     <style>
       @font-face {
         font-family: 'ernest-emily';
@@ -54,7 +46,7 @@
         font-family: 'Montserrat', sans-serif;
         font-weight: 700;
         line-height: 1.2;
-        color: #2b473f;
+        color: #2b473f; /* This is the dark green color seen on GGCC site */
       }
 
       .testimonial-author {
@@ -68,7 +60,6 @@
       }
     </style>
 
-    <!-- Open Graph / Social Meta -->
     <meta property="og:title" content="Anointed Vessels Christian School" />
     <meta property="og:description" content="Growing the next generation of Christian leaders in Kenya." />
     <meta property="og:image" content="%PUBLIC_URL%/cover.jpg" />
