--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     
     <title>Anointed Vessels Christian School | Faith-Based Education in Kenya</title>
 
+    <!-- Google Fonts Imports -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <!-- Meta Description for SEO -->
     <meta
       name="description"
@@ -37,10 +42,6 @@
 
     <!-- Theme Color (matches primary green) -->
     <meta name="theme-color" content="#2b473f" />
-
-    <!-- Preconnect to Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- No inline scripts or styles — all handled by React + Tailwind -->
   </head>
