--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         font-family: 'Montserrat', sans-serif;
         font-weight: 700;
         line-height: 1.2;
-        color: #2b473f; /* This is the dark green color seen on GGCC site */
+        color: #3f1712; /* This is the dark green color seen on GGCC site */
       }
 
       .testimonial-author {
